style.css
:root.dark {
    --color-black: black;
    --color-white: #fefefe;
}

:root.light {
    --color-black: #fefefe;
    --color-white: black;
}

@font-face {
    src: url(./fonts/MUNICH_SANS.ttf);
    font-family: munich;
}

body {
    background-color: var(--color-black);
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 100px;
    padding-top: 35px;
    padding-bottom: 0;;
}

.header {
    font-family: munich;
    font-weight: bolder;
    font-size: 100px;
    color: var(--color-white);
    
}

.calculator {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   gap: 20px;
   width: 400px;
}

.screen {
    display: flex;
    flex-direction: column;
    height: auto;
    width: 400px;
    border: 10px solid var(--color-white);
    border-left: 5px;
    border-right: 5px;
    color: var(--color-white);
}

.screen .previous {
    font-family: munich;
    font-size: 20px;
    min-height: 30px;
    text-align: end;
    padding: 0 4px;
}

.screen .current {
    font-family: munich;
    font-size: 50px;
    min-height: 60px;
    text-align: end;
    padding: 0 4px;
}

.buttons {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

button {
    font-family: munich;
    font-size: large; 
    padding: 15px 32px;
    text-align: center;
    border-radius: 12px;
    background-color: var(--color-black);
    color: var(--color-white);
    border-color: var(--color-white);
    transition-duration: 0.1s;
}

button:hover {
    background-color: var(--color-white);
    color: var(--color-black);
  }

.row-1,.row-2,.row-3,.row-4,.row-5 {
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 10px;
}

.row-1 {
    justify-content: space-evenly;
}

.row-3 .btn-operation {
    width: 78px;
}

#clear {
    width: 148px;
}

#backspace {
    padding: 14px 23px;
}

.btn-number.zero {
    width: 160px;
}

.footer {
    color: var(--color-white);
    font-weight: bolder;
    font-size: 15px;
}

#theme {
    position: absolute;
    top: 3rem;
    right: 3rem;
}

